--- a/app/views/santas_lists/index.html.erb
+++ b/app/views/santas_lists/index.html.erb
@@ -6,6 +6,7 @@
         <th>Naughty/Nice</th>
         <th>Age</th>
         <th>Gift</th>
+        <th>Delivered</th>
         <th colspan="3"></th>
     </tr>
     </thead>
@@ -16,6 +17,7 @@
             <td><%= s.list %></td>
             <td><%= s.age %></td>
             <td><%= s.gift %></td>
+            <td><%=s.delivered %></td>
         <% end %>
         </tr>
     </tbody>
